<resources>
    <string name="app_name">Rokid SDK</string>

    <!--iconfont-->
    <string name="icon_back">&#xe618;</string>

    <string name="icon_account">&#xe75e;</string>
    <string name="icon_device">&#xe650;</string>
    <string name="icon_skill">&#xe627;</string>
    <string name="icon_other">&#xe67d;</string>

    <!--mainActivity-->
    <string name="activity_main_not_login_tip">您还未登录，请登录后尝试</string>

    <!--text of bottom navigation-->
    <string name="bottom_navigation_account">账号</string>
    <string name="bottom_navigation_device">设备</string>
    <string name="bottom_navigation_skill">技能</string>
    <string name="bottom_navigation_other">其他</string>

    <!--fragment of login-->
    <string name="fragment_login_uid_hint">请输入账号</string>
    <string name="fragment_login_pwd_hint">请输入密码</string>
    <string name="fragment_login_success_title">当前已登录账号</string>
    <string name="fragment_login_btn">授权登录</string>
    <string name="fragment_logout_btn">登　　出</string>
    <string name="fragment_login_success">登录成功</string>
    <string name="fragment_login_fail">登录失败</string>
    <string name="fragment_logout_success">登出成功</string>
    <string name="fragment_logout_fail">登出失败</string>

    <!--fragment of device-->
    <string name="fragment_device_list">获取设备列表</string>
    <string name="fragment_device_list_empty">设备列表为空</string>
    <string name="fragment_device_list_fail">获取设备列表失败</string>
    <string name="fragment_device_unbind">解绑</string>
    <string name="fragment_device_unbind_fail">解绑设备失败</string>
    <string name="fragment_device_unbind_success">解绑设备成功</string>

    <!--fragment of bind-->
    <string name="fragment_bind_ble_name_prefix">Rokid-</string>
    <string name="fragment_bind_ble_name_hint">请输入蓝牙前缀，如：Rokid-Pebble</string>
    <string name="fragment_bind_ble_bind">已连接</string>
    <string name="fragment_bind_ble_scan">扫　描</string>
    <string name="fragment_bind_ble_scan_load_tip">正在扫描...</string>
    <string name="fragment_bind_ble_name_empty">您还未输入蓝牙前缀</string>
    <string name="fragment_bind_ble_list_empty">没有相匹配的蓝牙</string>
    <string name="fragment_bind_ble_connect_success">蓝牙连接成功，请输入wifi信息给设备配网</string>
    <string name="fragment_bind_ble_connect_fail">蓝牙连接失败</string>
    <string name="fragment_bind">绑　定</string>
    <string name="fragment_bind_wifi_name">请输入 wifi 名字</string>
    <string name="fragment_bind_wifi_pwd">请输入 wifi 密码</string>
    <string name="fragment_bind_wifi_empty">wifi 名字和密码为空，请重新输入</string>
    <string name="fragment_bind_send_success">发送数据成功</string>
    <string name="fragment_bind_send_fail">发送数据失败</string>

    <!--fragment of skill-->
    <string name="fragment_skill_devie_id">请输入设备 SN 号</string>
    <string name="fragment_skill_alarm_btn">获取闹钟列表</string>
    <string name="fragment_skill_reminder_btn">获取提醒列表</string>
    <string name="fragment_skill_alarm_list_success">获取闹钟列表成功</string>
    <string name="fragment_skill_alarm_list_fail">获取闹钟列表失败</string>
    <string name="fragment_skill_reminder_list_success">获取提醒列表成功</string>
    <string name="fragment_skill_reminder_list_fail">获取提醒列表失败</string>
    <string name="fragment_skill_alarm_info">闹钟 返回的消息：</string>
    <string name="fragment_skill_remind_info">提醒 返回的消息：</string>

    <!--fragmetn of message-->
    <string name="fragment_message_info">等待接收消息：</string>
    <string name="fragment_card_list_fail">获取card列表失败</string>
    <string name="fragment_card_list_empty">card列表为空</string>
</resources>
