<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/fragment_bind_scan_ble_btn_layer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fragment_bind_ble_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/fragment_bind_ble_name_hint"
                android:maxLines="1"
                android:text="@string/fragment_bind_ble_name_prefix"
                android:textSize="@dimen/sp_16" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/fragment_bind_scan_ble_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:text="@string/fragment_bind_ble_scan"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_bind_scan_ble_load_layer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_bind_scan_ble_btn_layer"
        android:layout_margin="@dimen/dp_10"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="30dp"
            android:layout_height="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:text="@string/fragment_bind_ble_scan_load_tip" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_bind_ble_list_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/fragment_bind_wifi_name_edit_ly"
        android:layout_below="@+id/fragment_bind_scan_ble_load_layer"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:overScrollMode="ifContentScrolls"
        android:scrollbars="vertical"
        android:visibility="gone" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fragment_bind_wifi_name_edit_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fragment_bind_wifi_pwd_edit_ly"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/fragment_bind_wifi_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="@string/fragment_bind_wifi_name"
            android:maxLines="1"
            android:textSize="@dimen/sp_16" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fragment_bind_wifi_pwd_edit_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fragment_bind_btn"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/fragment_bind_wifi_pwd_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="@string/fragment_bind_wifi_pwd"
            android:maxLines="1"
            android:textSize="@dimen/sp_16" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/fragment_bind_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/dp_20"
        android:text="@string/fragment_bind"
        android:textStyle="bold" />

</RelativeLayout>