<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/fragment_skill_device_id_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="@string/fragment_skill_devie_id"
            android:inputType="number"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_40">

        <Button
            android:id="@+id/fragment_skill_alarm_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/btn_bg_blue_shape"
            android:text="@string/fragment_skill_alarm_btn"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_20" />

        <Button
            android:id="@+id/fragment_skill_reminder_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_weight="1.0"
            android:background="@drawable/btn_bg_gray_shape"
            android:text="@string/fragment_skill_reminder_btn"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_20" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_skill_info"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/fragment_skill_info_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:lineSpacingExtra="2dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>